--- a/activityoptions/build.gradle
+++ b/activityoptions/build.gradle
@@ -20,6 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    //mvvm框架  data binding
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -30,4 +35,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.squareup.picasso:picasso:2.3.2'
 }
